--- a/faq-cn-bcol.html
+++ b/faq-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
+    <title>FAQ of the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
@@ -50,16 +50,15 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-sa-BCOL.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-sa-BCOL.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-sa-BCOL.html">Get Started</a>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">About</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html">Get Started</a>
                 </li>
-                <li><a class="NavLinkComponent " route="" href="faq-sa-BCOL.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-sa-BCOL.html"
-                        class="">Contact</a></li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent" route="" href="contact-sa-bcol.html" class="">中文</a></li>
+                <li><a class="NavLinkComponent" route="" href="contact-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -67,11 +66,11 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-sa-BCOL.html">About</a></li>
-                    <li><a href="how-to-join-sa-BCOL.html">How To Join</a></li>
-                    <li><a href="get-started-with-sa-BCOL.html">Get Started</a></li>
-                    <li><a href="faq-sa-BCOL.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-sa-BCOL.html">Contact</a></li>
+                    <li><a href="about-cn-bcol.html">About</a></li>
+                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
+                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
+                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
                 </ul>
             </div>
@@ -85,82 +84,109 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">CONTACT THE 2020 CHINESE BLOCKCHAIN OLYMPIAD</h1>
+                <h1 class="headerBlueText">FREQUENTLY ASKED QUESTIONS FOR THE 2020 CHINESE BLOCKCHAIN OLYMPIAD</h1>
             </div>
         </div>
 
         <div class="container-fluid">
             <div class="row">
-
-                <div class="col-md-6 col-sm-12 mediaCol-768-12">
-                    <div class="row mb-3">
-                        <div class="photoTitle">
-                            <h2 style="all:unset;">Team</h2>
-                        </div>
-                    </div>
-
-                    <div class="row contactPerson colorBk mt-5">
-                        <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
-                            <img src="images/contact/Mr. Faisal Saihan Alotaibi.jpg" class="circleImg">
-                        </div>
-
-                        <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
-                            <div class="name"><b> Faisal Saihan Alotaibi
-
-                                </b></div>
-
-                            <div class="position">President</div>
-                        </div>
-                    </div>
-
-
-                    <div class="row contactPerson colorBk mt-5">
-                        <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
-
-                            <img src="images/contact/Mr. Gabriel Chan.png" class="circleImg">
-                        </div>
-
-                        <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
-                            <div class="name"><b>Gabriel Chan</b></div>
-                            <div class="position"> International Advisor</div>
-                        </div>
-                    </div>
-
-
+                <div class="photoTitle">
+                    <h2 style="all:unset;">About CN-BCOL 2020</h2>
                 </div>
+            </div>
+        </div>
 
-                <div class="col-md-6 col-sm-12 mediaMt-5 mediaCol-768-12">
-                    <div class="row">
-                        <div class="photoTitle">
-                            <h2 style="all:unset;">Mailing Address</h2>
-                        </div>
-                        <div class="fs18 colorBk">Chinese Blockchain Olympiad,<br>
-                            C/O International Blockchain Olympiad,<br>
-                            333A, 1W Science Park Avenue,<br>
-                            New Territories, Chinese<br>
-                            <a href="" target="_blank">cn@ibcol.org</a></div>
+
+        <div class="container-fluid ">
+            <div class="row  colorBk">
+                <div class="fs24"><b>
+                        <h3 style="all:unset;">Who is eligible to participate?</h3>
+                    </b></div>
+                <div class="fs18f">
+                    <div class="justify"> <b>Individual Eligibility</b> — Any current or recent student may register as
+                        a competitor.
+                        A current student is defined as a person of any age that is enrolled in a recognized academic
+                        institution. A recent student would have been a current student until 3 years ago (July 5th,
+                        2017).
+                        An individual may be attached to an academic institution by being ever enrolled in it. A
+                        recognized
+                        institution is an accredited educational institution or an institution that may grant a degree
+                        or
+                        diploma. All institutions and competitors must be registered with the <a
+                            href="https://www.ibcol.org/registrar/registrar.html" target="_blank">IBCOL Registrar
+                            Office</a>.
+                    </div>
+                    <div class="mt-5 justify">
+                        <b>Team Eligibility</b> — Projects are submitted by teams of one to six eligible competitors.
+                        Each team
+                        must nominate one representative academic institution, if any of the team members are from
+                        different
+                        academic institutions. This representative institution determines which country or territory the
+                        team and thus project will represent. Teams may be composed of members from different
+                        countries/territories or academic institutions. The CN-BCOL works with those declaring their
+                        primary
+                        institutions from the Chinese.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid mt-5">
+            <div class="row  colorBk">
+                <div class="fs24"><b>
+                        <h3 style="all:unset;">What is the process for participating?</h3>
+                    </b></div>
+                <div class="fs18f">
+                    <div class="justify"> <b>Project Registration </b>
+                        — Individuals must first register with the <a
+                            href="https://www.ibcol.org/registrar/registrar.html" target="_blank">IBCOL Registrar</a>.
+                        Next, register
+                        your team and project at the <a href="https://www.ibcol.org/submission.html"
+                            target="_blank">IBCOL 2020 Project Submission</a>. A team may submit
+                        more than one
+                        project. Mentorship is available via the <a href="https://join.slack.com/t/ibcol2020/shared_invite/zt-e6g4h3h2-Qmc14IpmATNhJpC8xWaILA" target="_blank">IBCOL 2020 Slack
+                        </a>workspace. The absolute
+                        <b>deadline is the 15
+                            June 2020</b>.
 
                     </div>
+                    <div class="mt-3 justify">
+                        <b> Project Selection </b> — The CN-BCOL shall select up to 12 teams to represent the Chinese
+                        on a
+                        rolling
+                        basis from now until 15 June. The submissions will be evaluated by a panel of experts.
+                        Resubmissions are encouraged for projects that are improving. The final representatives shall be
+                        <b>announced on the week of 22nd of June 2020</b>.
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                    <div class="row mt-5">
-                        <div class="photoTitle">
-                            <h2 style="all:unset;">Press Kit </h2>
-                        </div>
-                        <a href="" class="btn btn--primary btn--large fs18 fs18-900" style="width: 100%;">DOWNLOAD PRESS
-                            RELEASE</a>
-                        <a href="" class="btn btn--large fs18 fs18-900 colorBgBk colorWt2" style="width: 100%;">DOWNLOAD
-                            HIGH-RES LOGOS
-                        </a>
+        <div class="container-fluid mt-5">
+            <div class="row  colorBk">
+                <div class="fs24"><b>
+                        <h3 style="all:unset;">What are the criteria for project evaluations?</h3>
+                    </b></div>
+                <div class="fs18f">
+                    <div class="justify"> The CN-BCOL shall evaluate projects based on the guidelines set forth by the
+                        <a href="https://www.ibcol.org/" target="_blank">International Blockchain Olympiad</a>.
                     </div>
 
                 </div>
             </div>
+        </div>
     </section>
 
 
 
-    <section class="s-section target-section" style="height: 800px;"></section>
 
+
+
+    <div class="home-content__button aboveFooterBtn mt-5">
+        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+            class="btn btn--primary btn--large fs18">REGISTER</a>
+        <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL FAQ </a>
+    </div>
 
 
     <footer class="paddingAdjustedFooter">
