--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -48,15 +48,15 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="about-sa-bcol.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-sa-bcol.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-sa-bcol.html">Get Started</a>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="about-cn-bcol.html">About</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html">Get Started</a>
                 </li>
-                <li><a class="NavLinkComponent" route="" href="faq-sa-bcol.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-sa-bcol.html" class="">Contact</a></li>
+                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-sa-bcol.html" class="">中文</a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -64,11 +64,11 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-sa-bcol.html">About</a></li>
-                    <li><a href="how-to-join-sa-bcol.html">How To Join</a></li>
-                    <li><a href="get-started-with-sa-bcol.html">Get Started</a></li>
-                    <li><a href="faq-sa-bcol.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-sa-bcol.html">Contact</a></li>
+                    <li><a href="about-cn-bcol.html">About</a></li>
+                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
+                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
+                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
                 </ul>
             </div>
