--- a/en/how-to-join-cn-bcol.html
+++ b/en/how-to-join-cn-bcol.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>How to join the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
     </title>
-    <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href=".././images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -14,18 +14,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/base.css" />
-    <link rel="stylesheet" href="./css/vendor.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/gbRemake.css" />
-    <link rel="stylesheet" href="./css/how-to-join.css" />
+    <link rel="stylesheet" href=".././css/base.css" />
+    <link rel="stylesheet" href=".././css/vendor.css" />
+    <link rel="stylesheet" href=".././css/main.css" />
+    <link rel="stylesheet" href=".././css/gbRemake.css" />
+    <link rel="stylesheet" href=".././css/how-to-join.css" />
 
 
-    <script src="./js/modernizr.js"></script>
+    <script src=".././js/modernizr.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./js/function.js"></script>
+    <script src=".././js/function.js"></script>
 
     <script>
 
@@ -45,7 +45,7 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2.png" alt="IBCOL: International Blockchain Olympiad" />
+                <img src=".././images/logo/resized/IBCOL CN Horizontal v2.png" alt="IBCOL: International Blockchain Olympiad" />
             </a>
         </div>
         <div class="desktop-nav">
@@ -59,7 +59,7 @@
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">中文</a></li>
+                        <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -73,6 +73,7 @@
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
                 </ul>
             </div>
         </nav>
@@ -283,7 +284,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12 mediaPE_MarFix">
                     <div class="peImgFrame">
-                        <img class="toolsImg" src="images/toolsImg/wp.png"> </div>
+                        <img class="toolsImg" src=".././images/toolsImg/wp.png"> </div>
                     <div class="row">
                         <div class="peTitle colorBk mt-3">
                             PAPER (40%)
@@ -297,7 +298,7 @@
                 </div>
                 <div class="col-md-4 col-sm-12 mediaPE_MarFix">
                     <div class="row">
-                        <div class="peImgFrame"><img class="toolsImg" src="images/toolsImg/pb.png"></div>
+                        <div class="peImgFrame"><img class="toolsImg" src=".././images/toolsImg/pb.png"></div>
                         <div class="peTitle colorBk mt-3">
                             POSTER (40%)
                         </div>
@@ -309,7 +310,7 @@
                 </div>
                 <div class="col-md-4 col-sm-12 mediaPE_MarFix">
                     <div class="row">
-                        <div class="peImgFrame"><img class="toolsImg" src="images/toolsImg/pc.png"></div>
+                        <div class="peImgFrame"><img class="toolsImg" src=".././images/toolsImg/pc.png"></div>
                         <div class="peTitle colorBk mt-3">
                             PITCH (20%)
                         </div>
@@ -332,7 +333,7 @@
 
 
             <div class="row mt-5">
-                <img style="width: 100%; height: 100%;" src="images/marking/marking.png">
+                <img style="width: 100%; height: 100%;" src=".././images/marking/marking.png">
             </div>
 
         </div>
@@ -422,15 +423,15 @@
                     <br>
                     <div class="col-12 ">
                         <a href="https://www.instagram.com/ibcol_org" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/ig.png"></a>&nbsp;&nbsp;&nbsp;
+                                src=".././images/sm/ig.png"></a>&nbsp;&nbsp;&nbsp;
                         <a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
-                                class="media768FooterImg" src="./images/sm/yt.png"></a>&nbsp;&nbsp;
+                                class="media768FooterImg" src=".././images/sm/yt.png"></a>&nbsp;&nbsp;
                         <a href="https://twitter.com/ibcolorg" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/tt.png"></a>&nbsp;&nbsp;
+                                src=".././images/sm/tt.png"></a>&nbsp;&nbsp;
                         <a href="https://www.facebook.com/ibcol.org" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/fb.png"></a>&nbsp;&nbsp;
+                                src=".././images/sm/fb.png"></a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/li.png"></a>&nbsp;&nbsp;</div>
+                                src=".././images/sm/li.png"></a>&nbsp;&nbsp;</div>
                 </div>
             </div>
 
@@ -466,10 +467,10 @@
 
     <!-- Java Script
         ================================================== -->
-    <script src="./js/jquery-3.2.1.min.js"></script>
-    <script src="./js/plugins.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/function.js"></script>
+    <script src=".././js/jquery-3.2.1.min.js"></script>
+    <script src=".././js/plugins.js"></script>
+    <script src=".././js/main.js"></script>
+    <script src=".././js/function.js"></script>
 </body>
 
 </html>
